# iPic3D

./: CMakeLists.txt  Makefile  iPic3D.cpp
H5hut-io/: CMakeLists.txt
H5hut-io/src/: H5hut-io.cpp
PSKOutput3D/: PSKhdf5adaptor.cpp
bc/: BcFields3D.cpp  BcParticles.cpp
communication/: ComNodes3D.cpp
fields/: EMfields3D.cpp
grids/: Grid3DCU.cpp
include/: EMfields3D.h  Particles.h  Particles3D.h  Particles3Dcomm.h  TransArraySpace3D.h  iPic3D.h  mathUtil.h
inputfiles/: GEM.inp  GEM.inp~  alfven.inp  alfven.inp~  langmuir.inp  shock.inp  shock.inp~
inputoutput/: Collective.cpp
main/: iPic3Dlib.cpp
particles/: Particles3D.cpp  Particles3Dcomm.cpp
utility/: mathUtil.cpp
